--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,6 +1,6 @@
 html,
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 @font-face {
   font-family: 'Material Icons';
@@ -32,4 +32,3 @@ body {
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
 }
-
